Re-init to fix outdated dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Madder libs</title>
+  <title>MadderLibs</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Bootstrap v4 -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <!-- annyang speech recognition-->
 </head>
 <body>
-  <ml-app></ml-app>
+  <app-root></app-root>
 </body>
 </html>
