Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit fff39dd1c00a324c0057f9cd42f4e7455169ae3f, reversing
changes made to a4bd2d6d3074d86c49048e8178c575e0b1345b29.

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MadderLibs</title>
+  <title>Madder libs</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Bootstrap v4 -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <!-- annyang speech recognition-->
 </head>
-<body class="mat-typography">
-  <app-root></app-root>
+<body>
+  <ml-app></ml-app>
 </body>
 </html>
